--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
-    "firebase": "^9.9.0",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
