--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
-    "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
