--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "firebase-admin": "^11.0.1",
+    "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
